name:          ayu-mushi-test
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          ayu-mushi-test
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    other-modules:  Post, Get, Shogi
    build-depends:  base   >= 4      && < 5
                  , scotty
                  ,http-types
                  ,random
                  , text
                  , mtl
                  , bytestring
                  , directory
                  , utf8-string
                  , json
                  , exceptions
                  , attoparsec
                  , containers
                  , lens
                  , http-conduit
                  , aeson
                  , parsec
                  , strict
